--- a/flip-cards/style/style.css
+++ b/flip-cards/style/style.css
@@ -1,28 +1,28 @@
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 #main-container {
-    margin-top: 10px;
-    margin-left: 5px;
+  margin-top: 10px;
+  margin-left: 5px;
 }
- 
+
 #card-holder {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card {
-    width: 200px;
-    height: 200px;
-    background-color: black;
-    margin: 5px;
+  width: 200px;
+  height: 200px;
+  background-color: black;
+  margin: 5px;
 }
 
 .new-card {
-    width: 200px;
-    height: 200px;
-    background-color: grey;
-    margin: 5px;
+  width: 200px;
+  height: 200px;
+  background-color: hotpink;
+  margin: 5px;
 }
